# hybrid-search-rag

./: .env.example  .gitignore  ARCHITECTURE.md  PIPELINE.md  PROJECT_BRIEF.md  README.md  pyproject.toml  skills-lock.json
src/: config.py
src/api/: app.py  routes.py  schemas.py
src/embeddings/: embedder.py
src/generation/: citations.py  generator.py
src/ingestion/: chunker.py  loader.py
src/llm/: client.py
src/models/: chunk.py
src/prompts/: templates.py
src/reranking/: reranker.py
src/retrieval/: bm25.py  dense.py  fusion.py  hybrid.py
tests/: conftest.py  test_api.py  test_bm25.py  test_chunk_store.py  test_citations.py  test_config.py  test_dense.py  test_embedder.py  test_fusion.py  test_generator.py  test_hybrid.py  test_ids.py  test_indexing_service.py  test_ingestion.py  test_llm_client.py  test_query_service.py  test_reranker.py  test_templates.py  test_vector_store.py
tests/live/: test_embed_live.py  test_llm_live.py  test_pinecone_live.py  test_rerank_live.py
