[project]
name = "hybrid-rag"
version = "0.1.0"
description = "Hybrid Search RAG over internal documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "langchain-text-splitters>=1.1.2",
    "cohere>=7.0.5",
    "rank-bm25>=0.2.2",
    "pinecone>=9.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: live provider tests that require API keys (run with RUN_LIVE=1)",
]
